# agent-core

./: .env.example  .gitignore  MANIFEST.in  README.md  agentcore  pyproject.toml  requirements.txt  setup.py  test.py  tool_calls.txt
agent_core/: __init__.py
agent_core/agent/: __init__.py  agent.py
agent_core/chatbot/: conversation.py
agent_core/mcp/: __init__.py
agent_core/providers/: __init__.py  anthropicProvider.py
cli/: README.md  __init__.py  commands.py  main.py
core/agent/: agent.py
core/chatbot/: conversation.py
core/mcp/: client.py
core/providers/: anthropicProvider.py  googleGeminiProvider.py  ollamaProvider.py  openAIProvider.py  providerClass.py
examples/: agent.py  browserTest.py  chat.py  debug_test.py  fancyTest.py  generate_random_numbers.py  mcp_server.py  multi_step_test.py  random_numbers_script.py  simple_agent_task.py  single_task_test.py
tests/: run_all_tests.py  test_anthropic_provider.py  test_gemini_provider.py  test_ollama_provider.py  test_openai_provider.py
